--- a/src/components/ChatWindow.css
+++ b/src/components/ChatWindow.css
@@ -11,6 +11,10 @@
     /* position: absolute; */
     
 }
+.ChatWindow__suggestions{
+    margin-left: 40px;
+    margin-top: 10px;
+}
 ::-webkit-scrollbar{
     width: 5px;
 }
